--- a/WebContent/static/css/all-setting.css
+++ b/WebContent/static/css/all-setting.css
@@ -13,6 +13,10 @@ body {
     height: 20px;
 }
 
+.wrong-msg {
+    color: red;
+}
+
 .navbar {
     background-color: #192965;
     filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.7));
