fix: modify api url

--- a/WebContent/static/css/forget-password.css
+++ b/WebContent/static/css/forget-password.css
@@ -10,3 +10,26 @@
 input {
     width: 250px !important;
 }
+
+#loadingDiv {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #f8f8f8;
+    opacity: 0.6;
+    z-index: 1000;
+}
+
+#loadingImg {
+    display: none;
+    position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
+    z-index: 1001;
+}
