--- a/WebContent/static/css/search-salon.css
+++ b/WebContent/static/css/search-salon.css
@@ -66,6 +66,9 @@ content > a:hover{
     visibility:hidden;
 }
 
+.hidden {
+    display: none;
+}
 @media only screen and (min-width: 0px) and (max-width: 575px){ 
     #sidebar {
         width: 250px;
