--- a/WebContent/static/css/edit-photo.css
+++ b/WebContent/static/css/edit-photo.css
@@ -9,6 +9,29 @@
     min-height: 50px;
 }
 
+#loadingDiv {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #f8f8f8;
+    opacity: 0.6;
+    z-index: 10000;
+}
+
+#loadingImg {
+    display: none;
+    position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
+    z-index: 10001;
+}
+
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
@@ -22,7 +45,7 @@
     position: absolute;
     right: 0;
     width: 310px;
-    height: 97%;
+    height: 107%;
     background: #beebe9;
     color: black;
     padding: 10px;
@@ -35,7 +58,6 @@
 }
 
 #hairstyle, #hair-color, #face-match {
-    /* height: 480px; */
     height: 76vh;
     overflow-y: auto;
 }
@@ -45,15 +67,31 @@
     margin: 3px;
 }
 
-.hairstylePos {
+.hairstyleLongPos {
 	position: relative;
 	z-index: 15;
-	left: 0px;
-    top: 70px;
-    width: 360px;
+	left: -25px;
+    top: 57px;
+    width: 400px;
 }
 
-#type {
+.hairstyleShortPos {
+	position: relative;
+	z-index: 15;
+	left: 36px;
+    top: 70px;
+    width: 280px;
+}
+
+.hairstyleBoyPos {
+	position: relative;
+	z-index: 15;
+	left: 65px;
+    top: 62px;
+    width: 220px;
+}
+
+#hairstyle-type {
     margin: 15px;
 }
 
@@ -63,12 +101,12 @@
     display: inline-block;
 }
 
-.favorite {
+/*.favorite {
     position: absolute;
     right: 2px;
     top: 2px;
     width: 18px !important;
-}
+}*/
 
 #colorpicker {
     margin: 35px;
@@ -136,7 +174,7 @@ h4 {
     margin-top: 8px !important;
 }
 
-#fb-icon, #ig-icon {
+#fb-icon {
     width: 40px;
     margin: 5px;
 }
