--- a/WebContent/static/css/chatbot.css
+++ b/WebContent/static/css/chatbot.css
@@ -1,14 +1,14 @@
 @charset "UTF-8";
         
 @media screen and (min-width: 320px) and (max-width: 1156px){
-	.talk_con_mob{
+	.talk-con-mob{
 		width:600px;
 		height:500px;
 		border:1px solid #666;
 		margin:50px auto 0;
 		background:#f9f9f9;
 	}
-	.talk_show_mob{
+	.talk-show-mob{
 		width:580px;
 		height:420px;
 		border:1px solid #666;
@@ -16,11 +16,11 @@
 		margin:10px auto 0;
 		overflow:auto;
 	}
-	.talk_input_mob{
+	.talk-input-mob{
 		width:580px;
 		margin:10px auto 0;
 	}
-	.talk_word_mob{
+	.talk-word-mob{
 		width:420px;
 		height:26px;
 		padding:0px;
@@ -30,25 +30,25 @@
 		text-indent:10px;
 	}  
 }
-	.talk_con{
-		width:600px;
-		height:500px;
+	.talk-con{
+		width:300px;
+		height:380px;
 		border:1px solid #666;
 		margin:50px auto 0;
 		background:#f9f9f9;
 		border-radius:10px;
 	}
-	.talk_show{
-		width:580px;
-		height:420px;
+	.talk-show{
+		width:280px;
+		height:300px;
 		border:1px solid #666;
 		background:#fff;
 		margin:10px auto 0;
 		overflow:auto;
 		border-radius:10px;
 	}
-	.talk_input{
-		width:580px;
+	.talk-input{
+		width:300px;
 		margin:10px auto 0;
 	}
 	.whotalk{
@@ -57,8 +57,8 @@
 		float:left;
 		outline:none;
 	}
-	.talk_word{
-		width:420px;
+	.talk-word{
+		width:200px;
 		height:26px;
 		padding:0px;
 		float:left;
@@ -67,7 +67,7 @@
 		text-indent:10px;
 		border-radius:5px;
 	}  
-	.talk_sub{
+	.talk-sub{
 		width:56px;
 		height:30px;
 		float:right; 
@@ -99,13 +99,13 @@
 
 img {
 	display: block;
-	width: 100%;
+	width: 80%;
 	height: auto;
 	margin: auto;
 }
 
 .card {
-	width: 50%;
-	height: 135%;
+	width: 100%;
+	height: auto;
 	float: left;
 }
