--- a/WebContent/static/css/setting.css
+++ b/WebContent/static/css/setting.css
@@ -72,6 +72,7 @@ hr {
     height: 220px;
     right: 0;
     left: 0;
+    top : 80px;
     position: absolute;
     margin: 10px auto;
     text-align: initial;
