--- a/WebContent/static/css/chatbot.css
+++ b/WebContent/static/css/chatbot.css
@@ -160,6 +160,13 @@
     font-size: 40px;
 }
 
+.chatbot-link {
+	color: black;
+}
+.chatbot-link:hover {
+	color: black;
+}
+
 @media screen and (min-width: 0px) and (max-width: 575px) {
 	.talk-con {
 	    position: absolute;
