--- a/WebContent/static/css/hair-match.css
+++ b/WebContent/static/css/hair-match.css
@@ -22,7 +22,7 @@ body {
 	overflow: hidden
 }
 
-#ocntent {
+#content {
     position: relative;
     height: 100vh;
 }
@@ -50,11 +50,15 @@ body {
     z-index: 15;
 }
 
+.icon span {
+	display: initial;
+}
+
 #frame {
     position: absolute;
     width: 350px;
     height: 500px;
-    top: 60px;
+    top: 68px;
     right: 0;
     left: 0;
     margin: 0 auto;
@@ -77,10 +81,61 @@ body {
     top: 140px;
     left: 38px;
     z-index: 10;
+    color: blue;
+}
+
+.hint-setting p {
+	margin-top: 0;
+}
+
+.arrow-icon {
+	display: none;
+    position: absolute;
+    text-align: center;
+    top: 80px;
+    right: 25px;
+    list-style-type:none;
+    z-index: 15;
+    padding: 0;
+}
+
+#plus-btn, #minus-btn, #up-btn, #down-btn, #right-btn, #left-btn {
+	color: blue !important;
+}
+
+#left-btn {
+    margin: 0 20px 0px 0;
 }
 
 @media only screen and (min-width: 0px) and (max-width: 575px){ 
     .btn-setting {
         font-size: initial !important;
+    }
+    
+    #frame {
+    	top: 159px;
+    }
+    
+    .hint-setting {
+    	left: 20px;    
+    	top: 80px;
+    }
+    
+    .hint-setting p {
+    	margin: 0px 0px 6px;
+    }
+    .icon {
+    	right: 100px;
+	    line-height: 2;
+    }
+    
+    .icon span {
+    	display: none;
+    }
+    
+    .arrow-icon {
+		display: initial;
+	    top: 80px;
+	    right: 25px;
     }
 }
