"style: add edit activity/cost cursor

--- a/WebContent/static/css/calendar.css
+++ b/WebContent/static/css/calendar.css
@@ -171,6 +171,9 @@ p {
     line-height: 40px;
 }
 
+#activity-tbody, #cost-tbody {
+	cursor: pointer;
+}
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
