feat: finish favorite function

--- a/WebContent/static/css/favorite.css
+++ b/WebContent/static/css/favorite.css
@@ -15,7 +15,7 @@ content > a:hover{
     position: absolute;
     right: 2px;
     top: 2px;
-    width: 8%;
+    width: 8% !important;
 }
 /* ---------------------------------------------------
     SIDEBAR STYLE
@@ -67,46 +67,149 @@ content > a:hover{
     visibility:hidden;
 }
 
-#delete-photo {
-    vertical-align: top;
+.delete-btn {
+    display: initial;
+    margin: 0;
 }
 
-.field-content {
-    display:inline-block;
-    position:relative;
-    width:200px;
-    height:200px;
-    overflow:hidden;
-}
-
-.square {
-    width:100%;
-}
-
-.wide-rectangle {
-    width:auto;
-    height:100%;
-    display: block;
-    margin: 0 auto;
-}
-
-.high-rectangle {
-    width:100%;
-    height:auto;
-    display: block;
-    margin: 0 auto;
-}
-
-.picture-wall-photo {
-    width: fit-content;
-    float: left;
-    margin: 10px;
-}
-
-.picture-wall-photo > p {
+.to-center {
     text-align: center;
 }
 
+#show-new-photo {
+    width: 160px;
+    display: block;
+    right: 0;
+    left: 0;
+    margin: 8px auto;
+}
+
+.delete-icon {
+    position: absolute;
+    color: red;
+    border: 1px solid;
+    padding: 5px;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+    right: 0px;
+    background-color: pink;
+}
+
+/* The work below, CSSBox, is released under the Creative Commons
+   Attribution-ShareAlike 4.0 license and is available on
+   https://github.com/TheLastProject/CSSBox. You are not required to add
+   additional credit to your website, just leave the above text in this file */
+   
+.padding-40 {
+	padding: 40px;	
+}   
+
+.card-img {
+	width: 90% !important;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
+.work-content {
+	height: 360px;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
+#hashtag span {
+	margin: 2px;
+}
+
+img.cssbox_thumb{
+  width: 200px;
+}
+
+div.cssbox {
+  display: initial;
+  margin: 8px;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+span.cssbox_full {
+  z-index: 999;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0.8);
+  top: 0;
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
+  cursor: default;
+  transition: opacity 0.5s linear;
+}
+
+span.cssbox_full .row {
+  border-radius: 5px;
+  width: 600px;
+  position: fixed;
+  background-color: white;
+  margin: 0;
+  padding: 0;
+  max-height: 90%;
+  max-width: 90%;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 20px black;
+}
+
+a.cssbox_close,
+a.cssbox_prev,
+a.cssbox_next {
+  z-index: 999;
+  position: fixed;
+  text-decoration: none;
+  visibility: hidden;
+  color: white !important;
+  font-size: 40px;
+}
+
+a.cssbox_close {
+  top: 9%;
+  right: 10%
+}
+
+a.cssbox_close::after {
+  content: '\00d7';
+}
+
+a.cssbox_prev,
+a.cssbox_next {
+  top: 50%;
+  transform: translate(0%, -50%);
+}
+
+a.cssbox_prev {
+  left: 5%;
+}
+
+a.cssbox_next {
+  right: 5%;
+}
+
+a:target ~ a.cssbox_close,
+a:target ~ a.cssbox_prev,
+a:target ~ a.cssbox_next {
+  visibility: visible;
+}
+
+a:target > img.cssbox_thumb + span.cssbox_full {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: initial;
+}
+/* This is the end of CSSBox */
 
 
 @media only screen and (min-width: 0px) and (max-width: 575px){ 
@@ -150,15 +253,26 @@ content > a:hover{
         background: #fff;
         color: #7386D5;
     }
-
-    .all-picture {
-        max-height: 80%;
-        max-width: 80%;
-        width: 220px;
-        height: auto;
-        position: absolute;
-        left: 0;
-        right: 0;
-        margin: auto;
+    
+	.card-img {
+  		width: 70% !important;
+		position: initial;
+	}
+	
+	.delete-btn {
+	    display: block;
+	    margin: 1px;
     }
+}
+
+@media only screen and (max-width: 991px) {
+	.card-img {
+		position: initial;
+	}
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+	.card-img {
+		position: initial;
+	}
 }
