--- a/WebContent/static/css/search-salon.css
+++ b/WebContent/static/css/search-salon.css
@@ -16,7 +16,7 @@ content>a:hover {
 	position: absolute;
 	right: 2px;
 	top: 2px;
-	width: 8%;
+	width: 8% !important;
 }
 /* ---------------------------------------------------
     SIDEBAR STYLE
@@ -49,7 +49,6 @@ content>a:hover {
 .btn {
 	vertical-align: top !important;
 }
-
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
