--- a/WebContent/static/css/search-stylist-work.css
+++ b/WebContent/static/css/search-stylist-work.css
@@ -16,7 +16,7 @@ content>a:hover {
 	position: absolute;
 	right: 2px;
 	top: 2px;
-	width: 8%;
+	width: 8% !important;
 }
 /* ---------------------------------------------------
     SIDEBAR STYLE
@@ -106,6 +106,7 @@ div.cssbox {
   display: initial;
   margin: 8px;
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+  position: relative;
 }
 
 span.cssbox_full {
