--- a/WebContent/static/css/search-stylist.css
+++ b/WebContent/static/css/search-stylist.css
@@ -16,7 +16,7 @@ content>a:hover {
 	position: absolute;
 	right: 2px;
 	top: 2px;
-	width: 8%;
+	width: 8% !important;
 }
 /* ---------------------------------------------------
     SIDEBAR STYLE
