--- a/WebContent/static/css/recommend-product.css
+++ b/WebContent/static/css/recommend-product.css
@@ -12,10 +12,10 @@ content > a:hover{
 }
 
 .favorite {
-    position: absolute;
-    right: 2px;
-    top: 2px;
-    width: 8%;
+	position: absolute;
+	right: 2px;
+	top: 2px;
+	width: 8% !important;
 }
 /* ---------------------------------------------------
     SIDEBAR STYLE
