--- a/WebContent/static/css/setting.css
+++ b/WebContent/static/css/setting.css
@@ -34,6 +34,7 @@ content > a:hover{
 #myList > a {
     margin: 10px;
 }
+
 #sidebarCollapse {
     display: none;
 }
@@ -62,11 +63,6 @@ hr {
     text-align: center;
 }
 
-#profile > img {
-    width: 200px;
-}
-
-
 #profile .card {
     width: 330px;
     height: 220px;
@@ -89,7 +85,7 @@ hr {
 }
 
 #hair-analysis, #notify {
-    position: relative;
+    position: absolute;
     left: 35%;
 }
 
@@ -108,7 +104,7 @@ hr {
         z-index: 999;
         transition: all 0.3s;
         overflow-y: scroll;
-        background-color: grey;
+		background: #beebe9;
         box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
     }
     
@@ -162,10 +158,3 @@ hr {
         left: 53px;
     }
 }
-/*
-@media only screen and (min-width: 500px) and (max-width: 810){
-    #modal-lg-setting {
-        max-width: 500px;
-    }
-}
-*/
