--- a/WebContent/static/css/edit-photo.css
+++ b/WebContent/static/css/edit-photo.css
@@ -130,6 +130,13 @@
 	box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
 
+.favorite {
+	position: absolute;
+	right: 2px;
+	top: 2px;
+	width: 8% !important;
+}
+
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
